--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -99,7 +99,7 @@
                                     <a sec:authorize="!hasAuthority('CAST_READ')" class="nav-link u-header__nav-link text-warning" href="javascript:alert('권한이없습니다')">
                                         난가정보
                                     </a>
-                                    <a sec:authorize="hasAuthority('CAST_READ')" class="nav-link u-header__nav-link" href="/cast">
+                                    <a sec:authorize="hasAuthority('CAST_READ')" class="nav-link u-header__nav-link" href="/priceInfo">
                                         난가정보
                                     </a>
                                 </li>
@@ -120,95 +120,38 @@
                                 <!-- End Blog -->
                                 <!-- 로그인 버튼 -->
                                 <li sec:authorize="isAnonymous()" class="nav-item u-header__nav-item-btn u-header__navbar-v-divider navbar-collapse-xs d-none d-lg-block" >
-                                    <a class="btn btn-sm btn-primary" href="/login" role="button">
+                                    <a class="btn btn-sm btn-primary btn-xs" href="/login" role="button">
                                         <span class="fa fa-user mr-1"> 로그인/회원가입</span>
                                     </a>
                                 </li>
-                                <!-- End 로그인 버튼 -->
-                                <!-- user profile -->
-                                <li sec:authorize="isAuthenticated()" class="nav-item hs-has-sub-menu u-header__nav-item-btn u-header__nav-item-user"
-                                    data-event="click"
-                                    data-animation-in="fadeInUp"
-                                    data-animation-out="fadeOut">
-                                    <a id="userDropdownInvoker" class="d-flex align-items-center u-header__nav-item-user-name" href="javascript:;"
-                                       aria-haspopup="true"
-                                       aria-expanded="false"
-                                       aria-labelledby="userDropdown">
-                                        <!--<img class="u-sm-avatar rounded-circle mr-2" src="" alt="Image Description">-->
-                                        <span sec:authentication="name"></span>
+                                <li sec:authorize="isAuthenticated()" class="nav-item u-header__nav-item u-header__navbar-v-divider">
+                                    <a class="nav-link u-header__nav-link" href="/myPage">
+                                        <span class="fa fa-user mr-1"><span sec:authentication="name"></span></span>
                                     </a>
-                                    <ul id="userDropdown" class="list-inline hs-sub-menu u-header__sub-menu mb-0" style="min-width: 220px;"
-                                        aria-labelledby="userDropdownInvoker">
-                                        <li class="dropdown-item u-header__sub-menu-list-item py-0">
-                                            <a class="justify-content-start u-header__sub-menu-nav-link" href="#">
-                                                마이페이지
-                                            </a>
-                                        </li>
-                                        <li class="dropdown-item u-header__sub-menu-list-item py-0">
-                                            <a class="justify-content-start u-header__sub-menu-nav-link" href="javascript:;">
-                                                쪽지
-                                            </a>
-                                        </li>
-                                        <li class="dropdown-divider"></li>
-                                        <li class="dropdown-item u-header__sub-menu-list-item py-0">
-                                            <a class="justify-content-start u-header__sub-menu-nav-link" href="/logout">
-                                                Sign out
-                                            </a>
-                                        </li>
-                                    </ul>
                                 </li>
-                                <!-- End User Dropdown -->
+                                <li sec:authorize="isAuthenticated()" class="nav-item u-header__nav-item">
+                                    <a class="nav-link u-header__nav-link p-0" href="/logout" role="button">
+                                        <button type="button" class="btn btn-outline-secondary btn-xs">로그아웃</button>
+                                    </a>
+                                </li>
+                                <!-- End 로그인 버튼 -->
                             </ul>
                         </div>
                         <!-- End Navigation -->
                         <ul class="navbar-nav flex-row u-header__secondary-nav">
-                            <!-- Responsive 로그인 Button -->
-                            <li sec:authorize="isAnonymous()" class="nav-item u-header__navbar-icon-wrapper u-header__navbar-icon navbar-toggler">
-                                <a class="btn btn-xs btn-icon btn-text-dark" href="javascript:;" role="button" >
-                                    <span class="fa fa-user btn-icon__inner"></span>
+                            <!--<li sec:authorize="isAuthenticated()" class="nav-item u-header__nav-item  ">
+                                <a class="nav-link u-header__nav-link  " href="/mypage">
+                                    <span class="fa fa-user mr-1  "></span>
                                 </a>
                             </li>
-                            <li sec:authorize="isAuthenticated()" class="nav-item u-header__navbar-icon-wrapper u-header__navbar-icon navbar-toggler">
-                                <a id="userDropdownInvoker2" class="btn btn-xs btn-icon btn-text-dark" href="javascript:;" role="button"
-                                   aria-controls="userDropdownDiv"
-                                   aria-haspopup="true"
-                                   aria-expanded="false"
-                                   data-unfold-event="click"
-                                   data-unfold-target="#userDropdownDiv"
-                                   data-unfold-type="css-animation"
-                                   data-unfold-duration="300"
-                                   data-unfold-delay="300"
-                                   data-unfold-hide-on-scroll="true"
-                                   data-unfold-animation-in="slideInUp"
-                                   data-unfold-animation-out="fadeOut">
-                                    <span class="fa fa-user btn-icon__inner"></span>
+                            <li sec:authorize="isAnonymous()" class="nav-item navbar-collapse-xs" >
+                                <a role="button" class="btn btn-text-dark" href="/login">
+                                    <span class="fa fa-user"></span>
+                                    </span>
                                 </a>
-                                <div id="userDropdownDiv" class="u-unfold u-unfold--cart text-center border rounded-0 right-0 p-7" style="min-width: 250px;">
-                                    <span sec:authentication="name"></span>
-                                    <ul id="" class="" style=""
-                                        >
-                                        <li class="">
-                                            <a class="" href="#">
-                                                마이페이지
-                                            </a>
-                                        </li>
-                                        <li class="">
-                                            <a class=" " href="javascript:;">
-                                                쪽지
-                                            </a>
-                                        </li>
-                                        <li class="dropdown-divider"></li>
-                                        <li class="">
-                                            <a class=" " href="/logout">
-                                                Sign out
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <!-- End Responsive 로그인 Button -->
+                            </li>-->
                             <!-- Shopping Cart -->
-                            <li class="nav-item u-header__navbar-icon-wrapper u-header__navbar-icon">
+                            <!--<li class="nav-item u-header__navbar-icon-wrapper u-header__navbar-icon">
                                 <a id="shoppingCartDropdownInvoker" class="btn btn-xs btn-icon btn-text-dark" href="javascript:;" role="button"
                                    aria-controls="shoppingCartDropdown"
                                    aria-haspopup="true"
@@ -223,13 +166,13 @@
                                    data-unfold-animation-out="fadeOut">
                                     <span class="fa fa-shopping-cart btn-icon__inner"></span>
                                 </a>
-                                <div id="shoppingCartDropdown" class="u-unfold u-unfold--cart text-center border rounded-0 right-0 p-7" aria-labelledby="shoppingCartDropdownInvoker" style="min-width: 250px;">
-                                    <span class="u-icon u-icon--primary u-icon--md rounded-circle mb-3">
+                                <div id="shoppingCartDropdown" class="u-unfold u-unfold&#45;&#45;cart text-center border rounded-0 right-0 p-7" aria-labelledby="shoppingCartDropdownInvoker" style="min-width: 250px;">
+                                    <span class="u-icon u-icon&#45;&#45;primary u-icon&#45;&#45;md rounded-circle mb-3">
                                       <span class="fa fa-shopping-basket u-icon__inner"></span>
                                     </span>
                                     <span class="d-block">Your Cart is Empty</span>
                                 </div>
-                            </li>
+                            </li>-->
                             <!-- End Shopping Cart -->
                         </ul>
                     </nav>
