--- a/src/main/resources/templates/registPriceInfo.html
+++ b/src/main/resources/templates/registPriceInfo.html
@@ -8,135 +8,84 @@
 </head>
     <section layout:fragment="content">
         <!-- Hire Us Form -->
-        <div th:unless="${param.success}" class="container space-2 space-3--lg">
-            <form th:formaction="@{/registUser}" method="post"
-                  class="js-validate w-lg-75 px-3 px-sm-9 mx-lg-auto form-signin"
-                  th:object="${user}">
+        <div class="container space-2 space-3--lg">
+            <form th:formaction="@{/registPriceInfo}" method="post"
+                  class="js-validate w-lg-75 px-3 px-sm-9 mx-lg-auto form-signin">
                 <input type="hidden" id="csrf" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
                 <!-- Title -->
                 <div class="w-md-80 w-lg-60 text-center mx-md-auto mb-5">
-                    <span class="u-label u-label--sm u-label--purple mb-3">join us</span>
-                    <h1 class="h3">회원가입</h1>
+                    <span class="u-label u-label--sm u-label--purple mb-3">등록</span>
+                    <h1 class="h3">임시 난가등록 </h1>
                     <p></p>
                 </div>
                 <!-- End Title -->
                 <div class="form-row">
-                    <div class="form-group col-md-5 js-form-message">
-                        <label class="h6 small d-block text-uppercase">아이디<span class="text-danger">*</span></label>
-                        <div class="js-focus-state input-group form">
-                        <input type="text" class="form-control form__input" required
-                               th:field="*{userId}"
-                               id="userId"
-                               placeholder="ID"
-                               aria-label="userId"
-                               data-msg="필수입력"
-                               data-error-class="u-has-error"
-                               data-success-class="u-has-success"
-                        />
-                            <div class="invalid-feedback" id="userIdFeedback">
-                                아이디가 이미 존재합니다.
-                            </div>
+                    <div class="form-group col-md-2">
+                        <label class="h6 small d-block text-uppercase">지역</label>
+                        <select class="form-control" name="areaId">
+                            <option value="1">서울</option>
+                            <option value="2">대전</option>
+                            <option value="3">영주</option>
+                            <option value="4">부산</option>
+                            <option value="5">대구</option>
+                            <option value="6">광주</option>
+                            <option value="7">전주</option>
+                            <option value="8">충북</option>
+                        </select>
                     </div>
+                    <div class="form-group col-md-10 form m-0 js-form-message">
+                        <label class="h6 small d-block text-uppercase">메모<span class="text-danger">*</span></label>
+                        <div class="js-focus-state input-group form">
+                            <input type="text" class="form-control form__input" name="memo"
+                                   placeholder="메모"/>
+                        </div>
                     </div>
                 </div>
                 <div class="form-row mb-3">
-                    <div class="form-group col-md-6 form m-0 js-form-message">
-                        <label class="h6 small d-block text-uppercase">비밀번호<span class="text-danger">*</span></label>
+                    <div class="form-group col-md-2 col-4 form m-0 js-form-message">
+                        <label class="h6 small d-block text-uppercase">왕<span class="text-danger">*</span></label>
                         <div class="js-focus-state input-group form">
-                            <input type="password" class="form-control form__input" required
-                                   th:field="*{pwd}"
-                                   placeholder="Password"
-                                   aria-label="password"
-                                   data-msg="필수입력"
-                                   data-error-class="u-has-error"
-                                   data-success-class="u-has-success"/>
+                            <input type="text" class="form-control form__input" name="size1"
+                                   placeholder="왕"/>
                         </div>
                     </div>
-                    <div class="form-group col-md-6 m-0 js-form-message">
-                        <label class="h6 small d-block text-uppercase">비밀번호확인<span class="text-danger">*</span></label>
+                    <div class="form-group col-md-2 col-4  form m-0 js-form-message">
+                        <label class="h6 small d-block text-uppercase">특<span class="text-danger">*</span></label>
                         <div class="js-focus-state input-group form">
-                            <input type="password" class="form-control form__input" placeholder="confirmPassword"
-                                   data-msg="비밀번호가 일치하지않습니다"
-                                   data-rule-equalto="#pwd"
-                                   aria-label="confirmPassword"
-                                   data-error-class="u-has-error"
-                                   data-success-class="u-has-success"/>
+                            <input type="text" class="form-control form__input" name="size2"
+                                   placeholder="특"/>
                         </div>
                     </div>
-                </div>
-                <div class="form-row mb-5">
-                    <div class="form-group col-md-6 js-form-message">
-                        <label class="h6 small d-block text-uppercase">성명<span class="text-danger">*</span></label>
+                    <div class="form-group col-md-2 col-4  form m-0 js-form-message">
+                        <label class="h6 small d-block text-uppercase">대<span class="text-danger">*</span></label>
                         <div class="js-focus-state input-group form">
-                            <input type="text" class="form-control form__input" required
-                                   th:field="*{userName}"
-                                   placeholder="홍길동"
-                                   aria-label="username"
-                                   data-msg="필수입력"
-                                   data-error-class="u-has-error"
-                                   data-success-class="u-has-success"/>
+                            <input type="text" class="form-control form__input"name="size3"
+                                   placeholder="대"/>
                         </div>
                     </div>
-                    <!--TODO :  핸드폰 validation할건지 인증할건지??-->
-                    <div class="form-group col-md-6 js-form-message">
-                        <label class="h6 small d-block text-uppercase">핸드폰<span class="text-danger">*</span></label>
+                    <div class="form-group col-md-2 col-4  form m-0 js-form-message">
+                        <label class="h6 small d-block text-uppercase">중<span class="text-danger">*</span></label>
                         <div class="js-focus-state input-group form">
-                            <input type="tel" class="form-control form__input" required
-                                   th:field="*{mobile}"
-                                   placeholder="010-0000-0000"
-                                   aria-label="tel"
-                                   data-msg="필수입력"
-                                   data-error-class="u-has-error"
-                                   data-success-class="u-has-success"/>
+                            <input type="text" class="form-control form__input"name="size4"
+                                   placeholder="중"/>
+                        </div>
+                    </div>
+                    <div class="form-group col-md-2 col-4  form m-0 js-form-message">
+                        <label class="h6 small d-block text-uppercase">소<span class="text-danger">*</span></label>
+                        <div class="js-focus-state input-group form">
+                            <input type="text" class="form-control form__input"name="size5"
+                                   placeholder="소"/>
+                        </div>
+                    </div>
+                    <div class="form-group col-md-2 col-4  form m-0 js-form-message">
+                        <label class="h6 small d-block text-uppercase">경<span class="text-danger">*</span></label>
+                        <div class="js-focus-state input-group form">
+                            <input type="text" class="form-control form__input"name="size6"
+                                   placeholder="경"/>
                         </div>
                     </div>
                 </div>
-                상점INFO
-                <hr class="my-3">
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label class="h6 small d-block text-uppercase" for="">상호</label>
-                        <input type="text" class="form-control" id="" placeholder="코리아에그"
-                               th:field="*{shopName}"/>
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label class="h6 small d-block text-uppercase" for="shopTel">상점전화번호</label>
-                        <input type="tel" class="form-control" id="shopTel" placeholder="02-123-1234" th:field="*{shopTel}" />
-                    </div>
-                </div>
-                <div class="form-row">
-                    <!--<div class="form-group col-md-5 ">
-                        <label class="h6 small d-block text-uppercase" for="sample3_postcode">우편번호</label>
-                        <div class="input-group">
-                            <input type="text" class="form-control" id="sample3_postcode" th:field="*{postNum}" />
-                            <div class="input-group-append">
-                                <button class="btn" type="button">주소검색</button>
-                            </div>
-                        </div>
-                    </div>-->
-                </div>
-                <div class="form-group">
-                    <label class="h6 small d-block text-uppercase" for="addr">주소</label>
-                    <div>
-                        <div id="addrWrap" class="position-absolute" style="display:none; border:1px solid #d4d7dd; height:400px;">
-                            <img src="//t1.daumcdn.net/postcode/resource/images/close.png" id="btnFoldWrap" style="cursor:pointer;position:absolute;right:0px;top:-1px;z-index:1" onclick="foldDaumPostcode()" alt="접기 버튼">
-                        </div>
-                        <input id="addr" type="text" class="form-control form__input" th:field="*{address}"
-                               placeholder="건물명,도로명,지번으로 검색하세요"
-                               aria-label="Default example with button"
-                               aria-describedby="inputGroup-sizing-default"
-                        >
-                        <input type="hidden" id="postNum" name="postNum">
-                        <input type="hidden" id="logitude" th:field="*{longitude}">
-                        <input type="hidden" id="latitude" th:field="*{latitude}">
-                    </div>
-                    <!--<input type="text" class="form-control" id="sample3_address" th:field="*{address}" />-->
-                </div>
-                <div class="form-group">
-                    <label class="h6 small d-block text-uppercase" for="sample3_detailAddress">상세주소</label>
-                    <input type="text" class="form-control" id="sample3_detailAddress" th:field="*{addressDetail}" />
-                </div>
-                <input type="submit" class="btn btn-primary" value="Sign in"/>
+                <input type="submit" class="btn btn-primary" value="등록"/>
             </form>
         </div>
         <!-- Successful Notification Section -->
