난가정보 하는중

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,11 +3,16 @@
 <section layout:fragment="content">
     <main id="content" role="main">
         <!-- Hero Section -->
-        <div class="gradient-overlay-half-dark-v3 bg-img-hero"  th:style="'background-image: url('+@{/img/test/000.jpg}+');'">
+        <!--<div class="gradient-overlay-half-dark-v3 bg-img-hero"  th:style="'background-image: url('+@{/img/test/000.jpg}+');'">-->
+        <div class="gradient-half-primary-v1 text-center rounded space-1 mt-lg-9">
             <!-- Main Content -->
-            <div class="d-lg-flex align-items-lg-center height-45vh--lg">
+            <!--<div class="d-lg-flex align-items-lg-center height-45vh&#45;&#45;lg">-->
                 <!-- 검색 Form -->
-                <div class="container space-1 space-0--lg mt-lg-8">
+                <!--<div class="container space-1 space-0&#45;&#45;lg mt-lg-8">-->
+                <div class="container">
+                    <div class="mb-4">
+                        <p class="h4 text-white">가까운 계란 판매점을 검색하세요</p>
+                    </div>
                     <form class="js-validate w-lg-75 px-0 px-sm-9 mx-lg-auto justify-content-lg-between align-items-lg-center row">
                         <!--TODO 폼 너비 어떻게 조절? -->
                         <div class="col-lg-12">
