--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -163,7 +163,7 @@
                     <div class="card-body">
                         <div class="text-center px-lg-1 px-3">
                         <ul class="list-unstyled text-secondary">
-                            <a href="/board?qna" class="text-body">
+                            <a href="/vsList" class="text-body">
                                 <li class="media align-items-center pb-2">
                                     <img class="max-width-5 mr-2"  th:src="@{/svg/business-icons/iStar_Design_Business_LineIcons_Live-66.svg}" alt="Image Description"/>
                                     <div class="media-body">
