--- a/src/main/resources/templates/boardList.html
+++ b/src/main/resources/templates/boardList.html
@@ -11,7 +11,7 @@
                 <p class="text-white">코리아에그의 공지 및 계란소식을 전해드립니다</p>
             </div>
             <a class="btn btn-sm btn-primary btn-wide" href="/boardList">공지사항</a>
-            <a class="btn btn-sm btn-dark btn-wide" href="vsList">1:1문의</a>
+            <a class="btn btn-sm btn-dark btn-wide" href="/contactUsList">1:1문의</a>
         </div>
         <!-- End CTA -->
 
@@ -21,44 +21,19 @@
             <div class="board">
                 <div class="board-heading row text-center">
                     <div class="col-sm-1 hidden-sm d-none d-sm-block">유형</div>
-                    <div class="col-sm-1 hidden-sm d-none d-sm-block">NO</div>
                     <div class="col-12  col-sm-8">제목</div>
                     <div class="col-sm-2 hidden-sm d-none d-sm-block">등록일</div>
                 </div>
                 <ul class="list-unstyled">
-                    <li th:each="price : ${}" class="row board-row text-center">
-                        <div class="col-1 col-sm-1"><span class="badge badge-primary">공지</span></div>
-                        <div class="col-sm-1 d-none d-sm-block">0001</div>
-                        <div class="col-11  col-sm-8 text-left">테스트입니다ㅗ이함지암ㅈ
-                            <span class="d-block d-sm-none"> 2016.05.01 </span>
+                    <li th:each="board : ${}" class="row board-row text-center">
+                        <div class="col-sm-1 d-none d-sm-block"><span th:text="${board.type}" class="text-danger">공지</span></div>
+                        <div class="col-12 col-sm-8 text-left">
+                            <span th:text="${board.typeName}" class="badge badge-primary d-block d-sm-none"></span>
+                            <span th:text="${board.title}" ></span>
+                            <span th:text="${#dates.format(board.regDate, 'yyyy.MM.dd')}" class="d-block d-sm-none"></span>
                         </div>
-                        <div class="col-sm-2 d-none d-sm-block">2016.05.01</div>
+                        <div th:text="${#dates.format(board.regDate, 'yyyy.MM.dd')}" class="col-sm-2 d-none d-sm-block">2016.05.01</div>
                     </li>
-                    <li class="row board-row text-center">
-                        <div class="col-1 col-sm-1 "><span class="badge badge-secondary">QNA</span></div>
-                        <div class="col-sm-1 d-none d-sm-block">0001</div>
-                        <div class="col-11  col-sm-8 text-left">테스트입니다ㅗ이함지암ㅈ
-                            <span class="d-block d-sm-none"> 2016.05.01 </span>
-                        </div>
-                        <div class="col-sm-2 d-none d-sm-block">2016.05.01</div>
-                    </li>
-                    <li class="row board-row text-center">
-                        <div class="col-1 col-sm-1 "><span class="badge badge-purple">뉴스</span></div>
-                        <div class="col-sm-1 d-none d-sm-block">0001</div>
-                        <div class="col-11  col-sm-8 text-left">테스트입니다ㅗ이함지암ㅈ
-                            <span class="d-block d-sm-none"> 2016.05.01 </span>
-                        </div>
-                        <div class="col-sm-2 d-none d-sm-block">2016.05.01</div>
-                    </li>
-                    <li class="row board-row text-center">
-                        <div class="col-1 col-sm-1 "><span class="badge badge-warning">자유</span></div>
-                        <div class="col-sm-1 d-none d-sm-block">0001</div>
-                        <div class="col-11  col-sm-8 text-left">테스트입니다ㅗ이함지암ㅈ
-                            <span class="d-block d-sm-none"> 2016.05.01 </span>
-                        </div>
-                        <div class="col-sm-2 d-none d-sm-block">2016.05.01</div>
-                    </li>
-
                 </ul>
             </div>
             <!--END 전체난가정보-->
@@ -66,7 +41,6 @@
                 <div class="col-md-3 col-md-offset-3">
                     <a role="button" class="btn btn-sm btn-primary btn-wide text-white" href="/board?regist">글등록</a>
                 </div>
-
             </div>
         </div>
         <!--END 난가정보 section-->
