--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -2,30 +2,29 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"  layout:decorate="~{layout/default}" >
 <section layout:fragment="content">
 
-    <div class="container space-1">
+    <div class="container space-2 space-3--lg">
         <!--view-->
-        <div th:unless="${param.regist}">
+        <div th:unless="${param.register}" th:object="${board}">
             <div class="row" >
-                <span th:text="*{id}"></span>
-                <span th:text="*{type}"></span>
+                <span th:text="*{boardName}"></span>
                 <span th:text="*{title}"></span>
-                <span th:text="*{regDate}"></span>
+                <span th:text="${#dates.format(board.regDate, 'yyyy.MM.dd')}"></span>
             </div>
             <div th:text="*{contents}"></div>
             <a  role="button" class="btn btn-primary" href="/boardList">목록</a>
         </div>
 
         <!--등록-->
-        <div  th:if="${param.regist}" class="js-validate rounded p-sm-7 mx-lg-auto" >
+        <div  th:if="${param.register}" class="js-validate rounded p-sm-7 mx-lg-auto" >
             <!-- Contact Us Form -->
-            <form th:formaction="@{/registBoard}" method="post" th:object="${board}">
+            <form action="/registerBoard" th:formaction="@{/registerBoard}" method="post" th:object="${board}">
                 <input type="hidden" id="csrf" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
                     <div class="row mb-5">
                         <div class="col-md-2">
                             <label class="h6 small d-block text-uppercase mb-3 mb-lg-0">유형:</label>
                         </div>
                         <div class="col-md-10">
-                            <select class="custom-select" name="type">
+                            <select class="custom-select" th:field="*{boardId}" >
                                 <option value="1">공지</option>
                                 <option value="2">뉴스</option>
                             </select>
@@ -38,7 +37,7 @@
                         <div class="col-md-10">
                             <div class="js-form-message">
                                 <div class="js-focus-state input-group form">
-                                    <input class="form-control form__input" type="text" name="title" required
+                                    <input class="form-control form__input" type="text" th:field="*{title}" required
                                            data-msg="Please enter your frist name."
                                            data-error-class="u-has-error"
                                            data-success-class="u-has-success">
@@ -53,7 +52,7 @@
                         <div class="col-md-10">
                             <div class="js-form-message">
                                 <div class="js-focus-state input-group form">
-                                    <textarea class="form-control form__input" rows="4" name="contents" required
+                                    <textarea class="form-control form__input" rows="4"  th:field="*{contents}" required
                                     placeholder=""
                                     aria-label=""
                                     data-msg="Please enter a reason."
@@ -67,7 +66,7 @@
 
                 <div class="row">
                     <div class="col-md-8 offset-md-4">
-                        <button type="submit" class="btn btn-primary btn-wide">입력완료</button>
+                        <input type="submit" class="btn btn-primary btn-wide" value="입력완료"/>
                     </div>
                 </div>
             </form>
