--- a/src/main/resources/templates/boardList.html
+++ b/src/main/resources/templates/boardList.html
@@ -25,11 +25,11 @@
                     <div class="col-sm-2 hidden-sm d-none d-sm-block">등록일</div>
                 </div>
                 <ul class="list-unstyled">
-                    <li th:each="board : ${}" class="row board-row text-center">
-                        <div class="col-sm-1 d-none d-sm-block"><span th:text="${board.type}" class="text-danger">공지</span></div>
+                    <li th:each="board : ${boardList}" class="row board-row text-center">
+                        <div class="col-sm-1 d-none d-sm-block"><span th:text="${board.boardName}" class="text-danger">공지</span></div>
                         <div class="col-12 col-sm-8 text-left">
-                            <span th:text="${board.typeName}" class="badge badge-primary d-block d-sm-none"></span>
-                            <span th:text="${board.title}" ></span>
+                            <span th:text="${board.boardName}" class="badge badge-primary d-block d-sm-none"></span>
+                            <a th:href="@{/board(id=${board.id})}"><span th:text="${board.title}" ></span></a>
                             <span th:text="${#dates.format(board.regDate, 'yyyy.MM.dd')}" class="d-block d-sm-none"></span>
                         </div>
                         <div th:text="${#dates.format(board.regDate, 'yyyy.MM.dd')}" class="col-sm-2 d-none d-sm-block">2016.05.01</div>
@@ -39,7 +39,7 @@
             <!--END 전체난가정보-->
             <div class="row">
                 <div class="col-md-3 col-md-offset-3">
-                    <a role="button" class="btn btn-sm btn-primary btn-wide text-white" href="/board?regist">글등록</a>
+                    <a role="button" class="btn btn-sm btn-primary btn-wide text-white" href="/board?register">글등록</a>
                 </div>
             </div>
         </div>
