--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -1,109 +1,188 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"  layout:decorate="~{/admin/adminDefault}" >
 <section layout:fragment="content">
-    <main id="content" role="main">
+    <p class="h4" >회원상세관리</p>
+    <hr/>
         <div>
-            <form th:formaction="@{/registUser}" method="post"
-                  class="js-validate w-lg-75 px-3 px-sm-9 mx-lg-auto form-signin"
+            <form th:formaction="@{/updateUser}" method="post"
+                  class="w-lg-75 px-3 px-sm-9 mx-lg-auto "
                   th:object="${user}">
                 <input type="hidden" id="csrf" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">아이디</label>
-                    <div class="col-sm-10">
-                        <span th:text="*{userId}"/>
+                <div class="form-group row my-0">
+                    <label class="h6 small col-3 col-md-2 col-form-label">아이디</label>
+                    <div class="col-9 col-md-4">
+                        <label class="col-form-label" th:text="*{userId}"></label>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">성명</label>
-                    <div class="col-sm-10">
-                        <input type="text" readonly class="form-control-plaintext" th:field="*{userName}"/>
+                    <label class="h6 small col-3 col-md-2 col-form-label">회원등급</label>
+                    <div class="col-9 col-md-4">
+                        <label class="col-form-label" th:text="*{role.roleName}"></label> <span class="small text-danger ml-4">변경은 입출금 관리에서 해주세요</span>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">핸드폰</label>
-                    <div class="col-sm-10">
+                    <label class="h6 small col-3 col-md-2 col-form-label">성명</label>
+                    <div class="col-9 col-md-4">
+                        <input type="text" readonly="" class="form-control-plaintext" th:field="*{userName}"/>
+                    </div>
+                    <label class="h6 small col-3 col-md-2 col-form-label">핸드폰</label>
+                    <div class="col-9 col-md-4">
                         <input type="text" readonly class="form-control-plaintext" th:field="*{mobile}"/>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">상호</label>
-                    <div class="col-sm-10">
+                    <label class="h6 small col-3 col-md-2 col-form-label">상호</label>
+                    <div class="col-9 col-md-4">
                         <input type="text" readonly class="form-control-plaintext" th:field="*{shopName}"/>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">전화</label>
-                    <div class="col-sm-10">
+                    <label class="h6 small col-3 col-md-2 col-form-label">전화</label>
+                    <div class="col-9 col-md-4">
                         <input type="text" readonly class="form-control-plaintext" th:field="*{shopTel}"/>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">주소</label>
-                    <div class="col-sm-10">
-                        <input type="text" readonly class="form-control-plaintext" th:field="*{address}"/>
+                    <label class="h6 small col-3 col-md-2 col-form-label">주소</label>
+                    <div class="col-9 col-md-10">
+                        <div id="layer" style="display:none;position:fixed;overflow:hidden;z-index:1;-webkit-overflow-scrolling:touch;">
+                            <img src="//t1.daumcdn.net/postcode/resource/images/close.png" id="btnCloseLayer" style="cursor:pointer;position:absolute;right:-3px;top:-3px;z-index:1" onclick="closeDaumPostcode()" alt="닫기 버튼">
+                        </div>
+                        <input id="addr" type="text" readonly class="form-control-plaintext" th:field="*{address}"/>
+                        <input type="hidden" id="postNum" name="postNum">
+                        <input type="hidden" id="logitude" th:field="*{longitude}">
+                        <input type="hidden" id="latitude" th:field="*{latitude}">
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">상세주소</label>
-                    <div class="col-sm-10">
+                    <label class="h6 small col-3 col-md-2 col-form-label">상세주소</label>
+                    <div class="col-9 col-md-4">
                         <input type="text" readonly class="form-control-plaintext" th:field="*{addressDetail}"/>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">가입일</label>
-                    <div class="col-sm-10">
-                        <span th:text="*{regDate}"/>
+                    <div class="col-12"></div>
+                    <label class="h6 small col-3 col-md-2 col-form-label">가입일</label>
+                    <div class="col-9 col-md-4">
+                        <label class="col-form-label" th:text="*{#dates.format(regDate, 'yyyy.MM.dd')}"></label>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">만료일</label>
-                    <div class="col-sm-10">
-                        <span th:text="*{expireDate}"/>
+                    <label class="h6 small col-3 col-md-2 col-form-label">만료일</label>
+                    <div class="col-9 col-md-4">
+                        <label class="col-form-label" th:text="*{#dates.format(expireDate, 'yyyy.MM.dd')}"></label>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">로그인횟수</label>
-                    <div class="col-sm-10">
-                        <span th:text="*{loginCount}"/>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">홈페이지</label>
-                    <div class="col-sm-10">
+                    <label class="h6 small col-3 col-md-2 col-form-label">홈페이지</label>
+                    <div class="col-9 col-md-4">
                         <input type="text" readonly class="form-control-plaintext" th:field="*{homepage}"/>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">메모</label>
-                    <div class="col-sm-10">
-                        <textarea type="text" readonly class="form-control-plaintext" th:field="*{memo}"/>
+                    <label class="h6 small col-3 col-md-2 col-form-label">로그인횟수</label>
+                    <div class="col-9 col-md-4">
+                        <label class="col-form-label" th:text="*{loginCount}"></label>
+                    </div>
+                    <label class="h6 small col-3 col-md-2 col-form-label">메모</label>
+                    <div class="col-9 col-md-10">
+                        <textarea type="text" readonly class="form-control-plaintext" th:field="*{memo}"></textarea>
                     </div>
                 </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">회원등급</label>
-                    <div class="col-sm-10">
-                        <fieldset disabled="">
-                                <select id="disabledSelect" class="form-control-plaintext">
-                                    <option>관리지</option>
-                                    <option>유통인</option>
-                                    <option>소매점</option>
-                                </select>
-                        </fieldset>
-                        </select>
-                    </div>
-                </div>
-                <input type="submit" class="btn btn-primary" value="수정완료"/>
-            </form>
-            <a role="button" class="btn btn-primary">수정요청</a>
-            <a role="button" class="btn btn-danger">삭제요청</a>
-            <a role="button" class="btn btn-warning">비밀번호초기화</a>
-        </div>
-    </main>
 
+                <input type="submit" class="btn btn-primary"  style="display: none" id="submitBtn" value="수정완료"/>
+
+            </form>
+            <button class="btn btn-primary" onclick="visibleInput();" id="visibleInputBtn">수정요청</button>
+            <a role="button" class="btn btn-danger text-white" th:href="@{'/admin/deleteUser?id=' + ${user.id}}">삭제요청</a>
+            <a role="button" class="btn btn-warning text-white" th:href="@{'/admin/resetPwd?id=' + ${user.id}}">비밀번호초기화</a>
+        </div>
+
+    <script th:inline="javascript" type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=af40a347c5a17c5118392cee56f35da6&libraries=services"></script>
+    <script th:inline="javascript" type="text/javascript" src="https://ssl.daumcdn.net/dmaps/map_js_init/postcode.v2.js"></script>
     <script th:inline="javascript">
         /*<![CDATA[*/
 
+        var $inputList = $(".form-control-plaintext");
 
+        function visibleInput() {
+            $inputList.removeClass("form-control-plaintext");
+            $inputList.addClass("form-control");
+            $inputList.removeAttr("readonly");
+            $("#visibleInputBtn").hide();
+            $("#submitBtn").show();
+        }
+
+        $(document).on('ready', function () {
+
+            /*$("#addr").on("focus", function(obj){
+                $("#addr").css("zIndex","-1");
+                sample3_execDaumPostcode();
+                obj.target.blur();
+            });*/
+            $("input[name='address']").focus(function (obj) {
+                $("#addr").css("zIndex","-1");
+                sample3_execDaumPostcode();
+                obj.target.blur();
+            });
+
+        });
+
+        // 우편번호 찾기 찾기 화면을 넣을 element
+        var element_wrap = document.getElementById('addrWrap');
+        var element_layer = document.getElementById('layer');
+
+        function closeDaumPostcode() {
+            // iframe을 넣은 element를 안보이게 한다.
+            element_layer.style.display = 'none';
+            $("#addr").css("zIndex","");
+        }
+
+        function sample3_execDaumPostcode() {
+            // 현재 scroll 위치를 저장해놓는다.
+            new daum.Postcode({
+                oncomplete: function(data) {
+                    // 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+
+                    // 각 주소의 노출 규칙에 따라 주소를 조합한다.
+                    // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+                    var addr = ''; // 주소 변수
+                    var extraAddr = ''; // 참고항목 변수
+
+                    //사용자가 선택한 주소 타입에 따라 해당 주소 값을 가져온다.
+                    if (data.userSelectedType === 'R') { // 사용자가 도로명 주소를 선택했을 경우
+                        addr = data.roadAddress;
+                    } else { // 사용자가 지번 주소를 선택했을 경우(J)
+                        addr = data.jibunAddress;
+                    }
+
+                    // 주소로 좌표를 검색합니다
+                    var geocoder = new daum.maps.services.Geocoder();
+                    geocoder.addressSearch(addr, function(result, status) {
+                        // 정상적으로 검색이 완료됐으면
+                        if (status === daum.maps.services.Status.OK) {
+                            document.getElementById("logitude").value = result[0].y;
+                            document.getElementById("latitude").value = result[0].x;
+                        }
+                    });
+
+                    // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                    document.getElementById('postNum').value = data.zonecode;
+                    document.getElementById("addr").value = addr;
+
+                    // iframe을 넣은 element를 안보이게 한다.
+                    // (autoClose:false 기능을 이용한다면, 아래 코드를 제거해야 화면에서 사라지지 않는다.)
+                    element_layer.style.display = 'none';
+
+                    // 우편번호 찾기 화면이 보이기 이전으로 scroll 위치를 되돌린다.
+                },
+                width : '100%',
+                height : '100%',
+                maxSuggestItems : 5
+            }).embed(element_layer);
+
+            // iframe을 넣은 element를 보이게 한다.
+            element_layer.style.display = 'block';
+            // iframe을 넣은 element의 위치를 화면의 가운데로 이동시킨다.
+            initLayerPosition();
+        }
+
+        // 브라우저의 크기 변경에 따라 레이어를 가운데로 이동시키고자 하실때에는
+        // resize이벤트나, orientationchange이벤트를 이용하여 값이 변경될때마다 아래 함수를 실행 시켜 주시거나,
+        // 직접 element_layer의 top,left값을 수정해 주시면 됩니다.
+        function initLayerPosition(){
+            var width = 300; //우편번호서비스가 들어갈 element의 width
+            var height = 400; //우편번호서비스가 들어갈 element의 height
+            var borderWidth = 5; //샘플에서 사용하는 border의 두께
+
+            // 위에서 선언한 값들을 실제 element에 넣는다.
+            element_layer.style.width = width + 'px';
+            element_layer.style.height = height + 'px';
+            element_layer.style.border = borderWidth + 'px solid';
+            // 실행되는 순간의 화면 너비와 높이 값을 가져와서 중앙에 뜰 수 있도록 위치를 계산한다.
+            element_layer.style.left = (((window.innerWidth || document.documentElement.clientWidth) - width)/2 - borderWidth) + 'px';
+            element_layer.style.top = (((window.innerHeight || document.documentElement.clientHeight) - height)/2 - borderWidth) + 'px';
+        }
 
         /*]]>*/
     </script>
